[package]
name = "test_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27.2"
eframe = { version = "0.27.2", features = ["persistence"] }
egui_extras = { version = "0.27.2", features = ["datepicker"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify-rust = "4"
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.14"
image = { version = "0.25", features = ["png", "jpeg"] }
